# elegant

./: .gitignore  COMPILER_REQUIREMENTS.md  INSTALL  Makefile  Makefile.am  NEWS  README.md  autogen.sh  compile_commands.json  configure.ac  elegant.pc.in
.github/workflows/: makefile.yml
docs/: api_reference.md  compile_commands_guide.md  memory_safety.md  overview.md  safety.md
examples/: Makefile.am  advanced_functional_demo.c  basic_examples.c  complete_functional_demo.c  functional_demo.c  functional_quicksort.c  memory_safety_demo.c  safety_demo.c  simple_examples.c  simple_generic_test.c  simple_test.c  test_suite.c
inc/: elegant.h  elegant_advanced.h  elegant_collection.h  elegant_core.h  elegant_either.h  elegant_maybe.h  elegant_memory.h  elegant_safety.h  elegant_scope.h
src/: Makefile.am  elegant.c  elegant_safety.c
